--- a/style.css
+++ b/style.css
@@ -8,13 +8,55 @@ height: 100%;
 width: 100%;
 }
 #header{
-    height:300px;
+    height:500px;
     width: 100%;
     background-color: rgb(18, 18, 59);
-    padding:80px 60px;
+    padding:0px 80px 50px;
+}
+#bottom{
+    height:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: cyan;
+
+}
+#main{
+    height: 100%;
+    width: 100%;
+    background-color: brown;
 }
 #mid{
-    height: 150px;
+    height: 200px;
     width: 100%;
     background-color: rgb(199, 5, 5);
+    display: flex;
+    align-items: center;
+}
+#top{
+    height: 50px;
+    width:100%;
+    background-color: yellow;
+}
+#leftdiv>h4{
+    font-family:Arial, Helvetica, sans-serif ;
+    font-weight: 200;
+}
+#leftdiv>h1{
+    font-size: 60px;
+    font-family:Arial, Helvetica, sans-serif ;
+    color: white;
+}
+#leftdiv{
+    height: 100%;
+    width: 50%;
+    background-color: green;
+    color:white;
+    padding: 20px;
+}
+#rightdiv{
+    height: 100%;
+    width: 50%;
+    padding:20px;
+    background-color: blueviolet;
 }
