--- a/project.css
+++ b/project.css
@@ -8,3 +8,13 @@ html,body{
     height:100%;
     width: 100%;
 }
+
+#main{
+    height:100%;
+    width: 100%;
+}
+#header{
+    height:70%;
+    width:100%;
+    background-color: rgb(17, 17, 40);
+}
